Load housing data

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,38 @@
     "    urllib.request.urlretrieve(housing_url, tgz_path)\n",
     "    housing_tgz = tarfile.open(tgz_path)\n",
     "    housing_tgz.extractall(path=housing_path)\n",
-    "    housing_tgz.close()\n",
-    "    \n",
+    "    housing_tgz.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch_housing_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load data with Pandas\n",
     "import pandas as pd\n",
     "def load_housing_data(housing_path=HOUSING_PATH):\n",
     "    csv_path = os.path.join(housing_path, \"housing.csv\")\n",
     "    return pd.read_csv(csv_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_housing_data()"
    ]
   }
  ],
